backend fixes for react ⚛️

--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://127.0.0.1:3333/api/v1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,6 +14,8 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
     "sweetalert2": "^11.4.22"
   },
   "devDependencies": {
