--- a/server/backend/package.json
+++ b/server/backend/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.1"
+  },
+  "devDependencies": {
+    "electron": "^19.0.8"
   }
 }
