--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -7,14 +7,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "tailwind": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch",
+    "tailwind": "npx tailwindcss -i ./src/index.css -o ./src/output.css --watch",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "react-use-clipboard": "^1.0.8",
     "redux": "^4.2.0",
     "sweetalert2": "^11.4.22"
   },
