--- a/server/backend/package.json
+++ b/server/backend/package.json
@@ -15,7 +15,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
-    "socket.io": "^4.5.1"
+    "sequelize": "^6.21.3",
+    "sequelize-cli": "^6.4.1",
+    "socket.io": "^4.5.1",
+    "sqlite3": "^5.0.9"
   },
   "devDependencies": {
     "electron": "^19.0.8"
