--- a/server/backend/package.json
+++ b/server/backend/package.json
@@ -16,11 +16,11 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "sequelize": "^6.21.3",
-    "sequelize-cli": "^6.4.1",
     "socket.io": "^4.5.1",
     "sqlite3": "^5.0.9"
   },
   "devDependencies": {
-    "electron": "^19.0.8"
+    "electron": "^19.0.8",
+    "sequelize-cli": "^6.4.1"
   }
 }
