--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,7 +16,8 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-web": "0.17.7",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "twrnc": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
