--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-use-clipboard": "^1.0.8",
     "redux": "^4.2.0",
+    "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.22"
   },
   "devDependencies": {
