--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,14 +10,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-network": "~4.2.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7",
     "socket.io-client": "^4.5.1",
-    "twrnc": "^3.3.3"
+    "twrnc": "^3.3.3",
+    "expo-barcode-scanner": "~11.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
