--- a/server/backend/package.json
+++ b/server/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "network": "^0.6.1",
     "nodemon": "^2.0.19",
     "qrcode": "^1.5.1",
     "sequelize": "^6.21.3",
