--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -21,7 +21,8 @@
     "react-use-clipboard": "^1.0.8",
     "redux": "^4.2.0",
     "socket.io-client": "^4.5.1",
-    "sweetalert2": "^11.4.22"
+    "sweetalert2": "^11.4.22",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
