--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,21 +14,22 @@
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
-    "expo-network": "~4.2.0",
+    "expo-barcode-scanner": "~11.3.0",
+    "expo-clipboard": "~3.0.1",
+    "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
-    "react-native-svg-transformer": "^1.0.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7",
-    "socket.io-client": "^4.5.1",
-    "twrnc": "^3.3.3",
-    "expo-barcode-scanner": "~11.3.0",
-    "expo-sqlite": "~10.2.0"
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
